añadi capa_datos -> conexion y librerias

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/GestionBiblioteca
 excludes=
+file.reference.flatlaf-3.5.1.jar=librerias\\flatlaf-3.5.1.jar
+file.reference.jcalendar-1.4.jar=librerias\\jcalendar-1.4.jar
+file.reference.jcommon-1.0.23.jar=librerias\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=librerias\\jfreechart-1.0.19.jar
+file.reference.mssql-jdbc-12.8.1.jre11.jar=librerias\\mssql-jdbc-12.8.1.jre11.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.flatlaf-3.5.1.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
