--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -81,7 +81,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=GestionBiblioteca
-main.class=gestionbiblioteca.Aplicacion
+main.class=capa_presentacion.Aplicacion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
