--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,8 @@ javac.classpath=\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.mssql-jdbc-12.8.1.jre11.jar}:\
-    ${file.reference.flatlaf-intellij-themes-3.5.4.jar}
+    ${file.reference.flatlaf-intellij-themes-3.5.4.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
