--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.5.1.jar=librerias\\flatlaf-3.5.1.jar
 file.reference.flatlaf-intellij-themes-3.5.4.jar=C:\\Users\\Alex\\Downloads\\flatlaf-intellij-themes-3.5.4.jar
+file.reference.flatlaf-intellij-themes-3.5.4.jar-1=librerias\\flatlaf-intellij-themes-3.5.4.jar
 file.reference.jcalendar-1.4.jar=librerias\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=librerias\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=librerias\\jfreechart-1.0.19.jar
@@ -53,7 +54,8 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.mssql-jdbc-12.8.1.jre11.jar}:\
     ${file.reference.flatlaf-intellij-themes-3.5.4.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.flatlaf-intellij-themes-3.5.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
