--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,12 +37,11 @@ dist.jlink.output=${dist.jlink.dir}/GestionBiblioteca
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-3.5.1.jar=librerias\\flatlaf-3.5.1.jar
-file.reference.flatlaf-intellij-themes-3.5.4.jar=C:\\Users\\Alex\\Downloads\\flatlaf-intellij-themes-3.5.4.jar
 file.reference.flatlaf-intellij-themes-3.5.4.jar-1=librerias\\flatlaf-intellij-themes-3.5.4.jar
 file.reference.jcalendar-1.4.jar=librerias\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=librerias\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=librerias\\jfreechart-1.0.19.jar
-file.reference.mssql-jdbc-12.8.1.jre11.jar=librerias\\mssql-jdbc-12.8.1.jre11.jar
+file.reference.sqlite-jdbc-3.7.2.jar=librerias\\sqlite-jdbc-3.7.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -52,10 +51,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}:\
-    ${file.reference.flatlaf-intellij-themes-3.5.4.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.flatlaf-intellij-themes-3.5.4.jar-1}
+    ${file.reference.flatlaf-intellij-themes-3.5.4.jar-1}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
