--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,9 +51,9 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${libs.absolutelayout.classpath}:\
     ${file.reference.flatlaf-intellij-themes-3.5.4.jar-1}:\
-    ${file.reference.sqlite-jdbc-3.7.2.jar}
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -110,7 +110,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Oracle_OpenJDK_18.0.2.1_1
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
