--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,6 @@ file.reference.flatlaf-intellij-themes-3.5.4.jar-1=librerias\\flatlaf-intellij-t
 file.reference.jcalendar-1.4.jar=librerias\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=librerias\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=librerias\\jfreechart-1.0.19.jar
-file.reference.mssql-jdbc-12.8.1.jre11.jar=C:\\Users\\Alex\\Downloads\\sqljdbc_12.8.1.0_enu\\sqljdbc_12.8\\enu\\jars\\mssql-jdbc-12.8.1.jre11.jar
 file.reference.sqlite-jdbc-3.7.2.jar=librerias\\sqlite-jdbc-3.7.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -54,8 +53,7 @@ javac.classpath=\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.flatlaf-intellij-themes-3.5.4.jar-1}:\
     ${file.reference.sqlite-jdbc-3.7.2.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.mssql-jdbc-12.8.1.jre11.jar}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
